--- a/css/styles.css
+++ b/css/styles.css
@@ -4,21 +4,6 @@
 
 <=======================> */
 
-/*
-
-TO DO:
-
-1. Style registration page
-2. Style login page
-3. Style dashboard
-
-
-
-*/
-
-
-
-
 /* Base Styles */
 body, html {
     height: 100%;
@@ -30,13 +15,13 @@ html {
     -webkit-tap-highlight-color: transparent;
 }
 body {
-    font-family: sans-serif;
+    font-family: 'Emilys Candy', cursive;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     text-align: left;    
     color: #333;
-    background-color: #fff;    
+    background-color: #C2F5F0;    
     margin: 0;    
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -46,27 +31,33 @@ body {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+/* Header */
 header {
+    margin-bottom: 20px;
+}
+.header {
+    height: 5px;
+}
+.dashboard-header {
     display: flex;
-    height: 70px;
-    border-bottom: 2px solid black;
     justify-content: space-between;
-    padding: 0 1rem;
-    align-items: center;
+    padding: 0 30px;
 }
-h1 {
-    font-size: calc(1.5rem + 0.5vw);
+.form-header {
+    text-align: center;
 }
-a {
-    padding: 1.5rem;
-    background: black;
+
+/* Site title */
+.site-title {
+    font-size: calc(2.5rem + 1.3vw);
+    letter-spacing: 0.2rem;
     text-transform: uppercase;
-    font-family: sans-serif;
-    font-weight: bold;
-    letter-spacing: 1px;
-    border: none;      
-    color: white;
-    text-decoration: none;   
+    color: #6495ED;
+    margin-bottom: 0;
+}
+.dashboard-title {
+    font-size: calc(1.8rem + 0.5vw);
 }
 
 /* Form classes */
@@ -80,37 +71,109 @@ a {
     display: grid;
 }
 label {
-    font-family: sans-serif;
-    font-size: 1.3rem;
-    font-weight: 600;   
-    padding: 1rem 0 0.5rem;
+    font-size: calc(1rem + 0.5vw);
+    padding: 1.8rem 0 0.5rem;
+    letter-spacing: 0.1rem;
 }
 input[type='text'],
 input[type='email'],
 input[type='password'] {
     font-size: 1.3rem;
     padding: 0.6rem 0.4rem;
-    border: 3px solid darkmagenta;
-}
-input[type='submit'] {
-    margin: 30px 0;
-    width: 250px;
-    padding: 1rem;
-    font-size: 1.4rem;
-    text-transform: uppercase;
-    background: darkmagenta;
-    color: #FFF;
+    background-color: #C5FFE0;
+    color: #FF69B5;
     border: none;
-    cursor: pointer;    
+    border-bottom: 4px solid #40E0D0;
 }
 select {
     font-size: 1.3rem;
     padding: 0.6rem 0.4rem;
-    border: 3px solid darkmagenta;    
+    background-color: #C5FFE0;
+    color: #FF69B5;
+    border: none;
+    border-bottom: 4px solid #40E0D0;  
+}
+a:hover, 
+a:focus {
+    background: #FF69B5;
+    color: #40E0D0;
+    transition: all 0.2s linear;
+}
+.reg-form-submit {
+    font-family: 'Emilys Candy', cursive;
+    font-size: calc(1.2rem + 0.5vw);
+    font-weight: bold;
+    letter-spacing: 0.1rem;     
+    text-transform: uppercase;
+    width: 100%;
+    padding: 1rem;
+    margin: 30px 0;
+    background: #40E0D0;
+    color: #FF69B5;
+    border: none;
+    cursor: pointer; 
+    transition: all 0.2s linear;
+}
+.reg-form-submit:hover,
+.login-button:hover {
+    background: #FF69B5;
+    color: #40E0D0;
+    transition: all 0.2s linear;
+}
+.logout-button {
+    font-family: 'Emilys Candy', cursive;
+    font-size: calc(1rem + 0.5vw);
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    width: 130px;
+    padding: 0.5rem;
+    margin: 30px 0;
+    background: #40E0D0;
+    color: #FF69B5;
+    border: none;
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0.2s linear;
+}
+.login-button {
+    font-family: 'Emilys Candy', cursive;
+    font-size: calc(1rem + 0.4vw);
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    width: 38%;
+    padding: 1rem;
+    margin: 30px 0 15px;
+    background: #40E0D0;
+    color: #FF69B5;
+    border: none;
+    cursor: pointer;
+    transition: all 0.2s linear;   
+}
+.register-now-button {
+    font-family: 'Emilys Candy', cursive;
+    font-size: calc(0.8rem + 0.4vw);
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    text-align: center;
+    width: 38%;
+    padding: 1rem;
+    margin: 30px 0 15px 0;
+    background: #EE82EE;
+    color: #40E0D0;
+    border: none;
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0.2s linear;   
+}
+.register-now-button:hover {
+    background: #40E0D0;
+    color: #EE82EE;    
+    transition: all 0.2s linear; 
 }
 .login-form-ctas {
     display: flex;
-    align-items: center;
     justify-content: space-between;    
 }
 
@@ -128,12 +191,14 @@ select {
     min-height: 40vh; 
     max-height: calc(100vh - 200px);
     padding: 1.5rem;
-    border: 2px solid black;
+    background-color: #9DF5EC;
+    border: 10px solid #C5FFE0;
 }
-.user-info-sidebar--list {
+.user-info-sidebar--info {
     font-size: 1.2rem;
-    padding: 0;
-    list-style-type: none;
+}
+.standout-colour {
+    color: #FF69B5;
 }
 .unicorn {
     grid-column: 3;
@@ -141,9 +206,30 @@ select {
     min-height: 40vh; 
     max-height: calc(100vh - 200px);
     padding: 1.5rem;
-    border: 2px solid black;    
 }
 
+/* Footer */
+footer {
+    margin-top: 30px;
+}
+.footer {
+    height: 20px;
+} 
+.footer--blue {
+    background-color: #6495ED;
+}
+.footer--green {
+    background-color: #40E0D0;
+}
+.footer--gold {
+    background-color: #FFD700;
+}
+.footer--pink {
+    background-color: #FF69B4;
+} 
+.footer--violet {
+    background-color: #EE82EE;
+}
 /* Hide elements class */
 .hide {
     display: none;
