Fixed SVG Sizing

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,8 @@ footer {
 svg {
     width: 100%;
     height: 100%;
+    min-height: 40vh;
+    max-height: calc(100vh - 200px);    
 }
 .grey {
     fill:#ececec;
